--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,29 @@
     <string name="welcome_toast">Welcome, %s</string>
     <string name="check_input_fields">Please, check the input fields</string>
     <string name="register">Register</string>
-    <string name="register_failure">Failed to register: %s</string>
+    <string name="failure_format">Failed: %s</string>
     <string name="registration_complete">Registration complete, please sign in</string>
+    <string name="expenses">Expenses</string>
+    <string name="management">Management</string>
+    <string name="earnings">Earnings</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="listing">Listing</string>
+    <string name="reports">Reports</string>
+    <string name="add">Add</string>
+    <string name="nothing_found">Nothing found. Use the button below to add.</string>
+    <string name="new_expense">New expense</string>
+    <string name="value">Value</string>
+    <string name="description">Description</string>
+    <string name="date">Date</string>
+    <string name="paid">Paid</string>
+    <string name="invalid_value">Invalid value</string>
+    <string name="failed_to_save">Failed to save data</string>
+    <string name="no_attachment">No attachments</string>
+    <string name="attachments_format">%d attachments</string>
+    <string name="value_format_list_item">%s  •  </string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="delete_prompt">Are you absolutely sure you want to delete this?</string>
+
 </resources>
