--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,8 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="delete_prompt">Are you absolutely sure you want to delete this?</string>
+    <string name="received">Received</string>
+    <string name="done">Done</string>
+    <string name="edit_transaction">Edit transaction</string>
 
 </resources>
