--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,12 +38,13 @@
     <string name="failed_to_save">Failed to save data</string>
     <string name="no_attachment">No attachments</string>
     <string name="attachments_format">%d attachments</string>
-    <string name="value_format_list_item">%s  •  </string>
+    <string name="value_format_list_item">%s   •  </string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="delete_prompt">Are you absolutely sure you want to delete this?</string>
     <string name="received">Received</string>
     <string name="done">Done</string>
     <string name="edit_transaction">Edit transaction</string>
+    <string name="new_revenue">New revenue</string>
 
 </resources>
