--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,9 +52,9 @@
     <string name="upload_completed">Upload completed</string>
     <string name="error_file_too_big">Selected file is too large. Please select a file less than 10 MB in size.</string>
     <string name="total_expenses">Total expenses</string>
-    <string name="average_cost">Average cost</string>
+    <string name="average">Average</string>
     <string name="total_format">%d expenses</string>
-    <string name="last_month_format">Las month: %s</string>
+    <string name="last_month_format">Last month: %s</string>
     <string name="total_paid">Total paid</string>
     <string name="total_to_be_paid">Total to be paid</string>
     <string name="total_balance">Balance</string>
@@ -62,5 +62,6 @@
     <string name="timeline">Timeline</string>
     <string name="biggest_format">Biggest: %s</string>
     <string name="smallest_format">Smallest: %s</string>
+    <string name="total_revenue">Total revenue</string>
 
 </resources>
